feat/swagger added for get-room
